buttons are now %placeholder, changed demo-index

--- a/index.html
+++ b/index.html
@@ -78,39 +78,39 @@
                 <div class="row">
                     <div class="four columns">
                         <h4>Size</h4>
-                        <a href="" class="btn tiny">Tiny</a><br> <br>
-                        <a href="" class="btn small">Small</a><br> <br>
-                        <a href="" class="btn normal">Normal</a><br> <br>
-                        <a href="" class="btn big">Big Button</a>
+                        <a href="" class="button tiny">Tiny</a><br> <br>
+                        <a href="" class="button small">Small</a><br> <br>
+                        <a href="" class="button normal">Normal</a><br> <br>
+                        <a href="" class="button big">Big Button</a>
                     </div>
                     <div class="four columns">
                         <h4>Style</h4>
-                        <a href="" class="btn square">Squared Form</a><br><br>
-                        <a href="" class="btn radius">Radius Form</a><br><br>
-                        <a href="" class="btn pill">Pill Form</a>
+                        <a href="" class="button square">Squared Form</a><br><br>
+                        <a href="" class="button radius">Radius Form</a><br><br>
+                        <a href="" class="button pill">Pill Form</a>
                     </div>
                     <div class="four columns">
                         <h4>State</h4>
-                        <a href="" class="btn primary">Primary</a><br><br>
-                        <a href="" class="btn secondary">Secondary</a><br><br>
-                        <a href="" class="btn alert">Alert</a><br><br>
-                        <a href="" class="btn success">Success</a>
+                        <a href="" class="button primary">Primary</a><br><br>
+                        <a href="" class="button secondary">Secondary</a><br><br>
+                        <a href="" class="button alert">Alert</a><br><br>
+                        <a href="" class="button success">Success</a>
                     </div>
                 </div>
                 <h3>Button Group</h3>
-                <ul class="btn-group">
-                    <li><a class="btn" href="">First</a></li>
-                    <li><a class="btn" href="">Second</a></li>
-                    <li><a class="btn" href="">Last</a></li>
+                <ul class="button-group">
+                    <li><a class="button" href="">First</a></li>
+                    <li><a class="button" href="">Second</a></li>
+                    <li><a class="button" href="">Last</a></li>
                 </ul>
                 <br> <br>
 
                 <h3>Button Group Radius</h3>
-                <ul class="btn-group radius">
-                    <li><a href="" class="btn">First</a></li>
-                    <li><a href="" class="btn">Second</a></li>
-                    <li><a href="" class="btn">Third</a></li>
-                    <li><a href="" class="btn">Last</a></li>
+                <ul class="button-group radius">
+                    <li><a href="" class="button">First</a></li>
+                    <li><a href="" class="button">Second</a></li>
+                    <li><a href="" class="button">Third</a></li>
+                    <li><a href="" class="button">Last</a></li>
                 </ul>
 
                 <br> <br>
