fixes, docu comments, top-bar navigation

--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
                    <li>Aliquam tincidunt mauris eu risus.</li>
                 </ol>
 
+                <h3>Defintion List</h3>
                 <dl>
                     <dt>Definition List</dt>
                     <dd>lorem ipsum dolor sit amet Vivamus magna. Cras in mi at felis aliquet congue. </dd>
                 </dl>
 
-                <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-
-                <h3>Header Level 3</h3>
+                <h3>Header Level 3 and an unordered list</h3>
 
                 <ul>
                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
                    <li>Aliquam tincidunt mauris eu risus.</li>
                 </ul>
 
+                <h3>Code Snippet</h3>
                 <pre><code>
 #header h1 a {
     display: block;
@@ -164,9 +164,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            consequat.
                         </p>
                     </div>
                 </div>
