--- a/kitchensink.html
+++ b/kitchensink.html
@@ -27,7 +27,17 @@
 
 </head>
     <body>
-
+        <div class="top-bar">
+            <ul>
+                <li class="branding">
+                    <a class="beta" href="#">Shepherd</a>
+                </li>
+                <li><a href="#">Item-1</a></li>
+                <li><a href="#">Item-2</a></li>
+                <li><a href="#">Item-3</a></li>
+                <li class="meta"><a href="#">Item</a></li>
+            </ul>
+        </div>
         <div class="row wrapper">
             <header class="twelve columns">
                 <h1>Dies ist der Header</h1>
@@ -46,31 +56,34 @@
 
 
                 <h1>HTML Ipsum Presents</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, iste saepe temporibus ipsa tenetur sapiente nostrum unde dolorum cum modi accusamus aliquid exercitationem? Voluptatem, a accusamus laborum unde natus aliquid praesentium eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, explicabo, sapiente, assumenda, mollitia debitis iure temporibus quaerat magni esse vero similique aliquid ea.
+                </p>
 
-                <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, <small> SMALL feugiat vitae,</small> ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>EM Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>CODE commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+                <h2>Various Elements</h2>
+                    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, <small> SMALL feugiat vitae,</small> ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>EM Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>CODE commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
-
+                <h2>Media Object</h2>
                 <div class="mod-start-teaser">
                     <div class="img">
                         <img src="http://placehold.it/200x150" alt="">
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        Lorem ipsum dolor sit amet, consectetur
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        <blockquote>
-                            <p>
-                                lorem Ipusm dolor <cite>lorem ipsum</cite> sit amet
-                            </p>
-                            <footer class="source">
-                                <a href="#">some greek guy</a>
-                            </footer>
-                        </blockquote>
+                        cillum dolore eu fugiat
                     </p>
                 </div>
+
+                <h2>Blockquote</h2>
+                <blockquote>
+                    <p>
+                        lorem Ipusm dolor <cite>lorem ipsum</cite> sit amet
+                    </p>
+                    <footer class="source">
+                        <a href="#">some greek guy</a>
+                    </footer>
+                </blockquote>
 
                 <!-- Beginn Kitchen Sink -->
 
